close #82 visually distinguish the drawer from the others. also implemented that canvas is cleared after each round. fixed a bug that others can acces delete and undo even if they are not painter

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1506,3 +1506,5 @@ html body .page-background .word-option.selected {
   height: 35px;
   font-size: 14px;
 }
+.player-painter-indicator { margin-left: 4px; }
+
