--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -228,6 +228,16 @@ a {
     -1px -1px 0 #fff, 1px -1px 0 #fff, 1px 1px 0 #fff, -1px 1px 0 #fff !important;
 }
 
+.mainpage_wrapper{
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+}
+
 .login-button:hover {
   background-color: #dabaff !important;
   box-shadow: 0 8px 20px rgba(127, 90, 197, 0.4), 0 12px 12px rgba(0, 0, 0, 0.1) !important;
@@ -1011,6 +1021,10 @@ textarea {
 .tool-button:active {
   transform: none; /* Override previous active scale */
   background-color: #eeeeee; /* Slightly darker for active */
+}
+
+.Drawzone_button_login{
+  width: 200px!important;
 }
 
 /* Active Tool Indicator */
